...
  String get navCreateListing => 'İlan Ver';

  @override
  String get navMessages => 'Mesajlar';

  @override
  String get navProfile => 'Hesabım';

  @override
  String get profileTitle => 'Hesabım';

  @override
  String get editProfile => 'Profili Düzenle';
...
